@@ -1,7 +1,6 @@
 package dev.toonformat.jtoon.normalizer;
 
 import dev.toonformat.jtoon.util.ObjectMapperSingleton;
-import tools.jackson.core.JacksonException;
 import tools.jackson.databind.JsonNode;
 import tools.jackson.databind.ObjectMapper;
 import tools.jackson.databind.node.ArrayNode;
@@ -15,7 +14,6 @@ import tools.jackson.databind.node.NullNode;
 import tools.jackson.databind.node.ObjectNode;
 import tools.jackson.databind.node.ShortNode;
 import tools.jackson.databind.node.StringNode;
-
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.time.Instant;
@@ -29,12 +27,12 @@ import java.time.format.DateTimeFormatter;
 import java.util.Calendar;
 import java.util.Collection;
 import java.util.Date;
+import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.function.IntFunction;
 import java.util.stream.Stream;
 
 /**
@@ -47,6 +45,15 @@ public final class JsonNormalizer {
      * Shared ObjectMapper instance configured for JSON normalization.
      */
     public static final ObjectMapper MAPPER = ObjectMapperSingleton.getInstance();
+
+    /**
+     * maximal allowed nesting depth of list.
+     */
+    public static final int MAX_ALLOWED_NESTING_DEPTH = 256;
+
+    private static final ThreadLocal<Integer> DEPTH_COUNTER = ThreadLocal.withInitial(() -> 0);
+    private static final ThreadLocal<Map<Object, Boolean>> VISITED =
+        ThreadLocal.withInitial(IdentityHashMap::new);
 
     private static final List<Function<Object, JsonNode>> NORMALIZERS = List.of(
         JsonNormalizer::tryNormalizePrimitive,
@@ -72,14 +79,17 @@ public final class JsonNormalizer {
      * @return Parsed JsonNode
      * @throws IllegalArgumentException if the input is blank or not valid JSON
      */
-    public static JsonNode parse(String json) {
-        if (json == null || json.trim().isEmpty()) {
-            throw new IllegalArgumentException("Invalid JSON");
+    public static JsonNode parse(final String json) {
+        if (json == null) {
+            throw new IllegalArgumentException("JSON string cannot be null");
+        }
+        if (json.isBlank()) {
+            throw new IllegalArgumentException("JSON string cannot be blank");
         }
         try {
             return MAPPER.readTree(json);
         } catch (Exception e) {
-            throw new IllegalArgumentException("Invalid JSON", e);
+            throw new IllegalArgumentException("Invalid JSON: " + e.getMessage(), e);
         }
     }
 
@@ -88,39 +98,64 @@ public final class JsonNormalizer {
      *
      * @param value The value to normalize
      * @return The normalized JsonNode
+     * @throws IllegalArgumentException if nesting depth exceeds MAX_DEPTH or circular reference detected
      */
-    public static JsonNode normalize(Object value) {
+    public static JsonNode normalize(final Object value) {
+        final int currentDepth = DEPTH_COUNTER.get();
+        if (currentDepth > MAX_ALLOWED_NESTING_DEPTH) {
+            DEPTH_COUNTER.remove();
+            throw new IllegalArgumentException("Maximum nesting depth exceeded: " + MAX_ALLOWED_NESTING_DEPTH);
+        }
+        DEPTH_COUNTER.set(currentDepth + 1);
+        try {
+            return normalizeInternal(value);
+        } finally {
+            DEPTH_COUNTER.set(currentDepth);
+        }
+    }
+
+    private static JsonNode normalizeInternal(final Object value) {
         if (value == null) {
             return NullNode.getInstance();
         } else if (value instanceof JsonNode jsonNode) {
             return jsonNode;
-        } else if (value instanceof Optional<?>) {
-            return normalize(((Optional<?>) value).orElse(null));
-        } else if (value instanceof Stream<?>) {
-            return normalize(((Stream<?>) value).toList());
-        } else if (value.getClass().isArray()) {
-            return normalizeArray(value);
-        } else {
-            return normalizeWithStrategy(value);
+        }
+        final Map<Object, Boolean> visited = VISITED.get();
+        if (visited.containsKey(value)) {
+            throw new IllegalArgumentException("Circular reference detected");
+        }
+        visited.put(value, Boolean.TRUE);
+        try {
+            if (value instanceof Optional<?>) {
+                return normalize(((Optional<?>) value).orElse(null));
+            } else if (value instanceof Stream<?>) {
+                return normalize(((Stream<?>) value).toList());
+            } else if (value.getClass().isArray()) {
+                return normalizeArray(value);
+            } else {
+                return normalizeWithStrategy(value);
+            }
+        } finally {
+            visited.remove(value);
         }
     }
 
     /**
      * Attempts normalization using chain of responsibility pattern.
      */
-    private static JsonNode normalizeWithStrategy(Object value) {
+    private static JsonNode normalizeWithStrategy(final Object value) {
         return NORMALIZERS.stream()
             .map(normalizer -> normalizer.apply(value))
             .filter(Objects::nonNull)
             .findFirst()
-            .orElse(NullNode.getInstance());
+            .orElseGet(NullNode::getInstance);
     }
 
     /**
      * Attempts to normalize primitive types and their wrappers.
      * Returns null if the value is not a primitive type.
      */
-    private static JsonNode tryNormalizePrimitive(Object value) {
+    private static JsonNode tryNormalizePrimitive(final Object value) {
         if (value instanceof String stringValue) {
             return StringNode.valueOf(stringValue);
         } else if (value instanceof Boolean boolValue) {
@@ -145,7 +180,7 @@ public final class JsonNormalizer {
     /**
      * Normalizes Double values handling special cases.
      */
-    private static JsonNode normalizeDouble(Double value) {
+    private static JsonNode normalizeDouble(final Double value) {
         if (!Double.isFinite(value)) {
             return NullNode.getInstance();
         }
@@ -153,13 +188,13 @@ public final class JsonNormalizer {
             return IntNode.valueOf(0);
         }
         return tryConvertToLong(value)
-            .orElse(DoubleNode.valueOf(value));
+            .orElseGet(() -> DoubleNode.valueOf(value));
     }
 
     /**
      * Normalizes Float values handling special cases.
      */
-    private static JsonNode normalizeFloat(Float value) {
+    private static JsonNode normalizeFloat(final Float value) {
         return Float.isFinite(value)
             ? FloatNode.valueOf(value)
             : NullNode.getInstance();
@@ -168,14 +203,14 @@ public final class JsonNormalizer {
     /**
      * Attempts to convert a double to a long if it's a whole number.
      */
-    private static Optional<JsonNode> tryConvertToLong(Double value) {
+    private static Optional<JsonNode> tryConvertToLong(final Double value) {
         if (value != Math.floor(value)) {
             return Optional.empty();
         }
         if (value > Long.MAX_VALUE || value < Long.MIN_VALUE) {
             return Optional.empty();
         }
-        long longVal = value.longValue();
+        final long longVal = value.longValue();
         return Optional.of(LongNode.valueOf(longVal));
     }
 
@@ -183,7 +218,7 @@ public final class JsonNormalizer {
      * Attempts to normalize BigInteger and BigDecimal.
      * Returns null if the value is not a big number type.
      */
-    private static JsonNode tryNormalizeBigNumber(Object value) {
+    private static JsonNode tryNormalizeBigNumber(final Object value) {
         if (value instanceof BigInteger bigInteger) {
             return normalizeBigInteger(bigInteger);
         } else if (value instanceof BigDecimal bigDecimal) {
@@ -196,8 +231,8 @@ public final class JsonNormalizer {
     /**
      * Normalizes BigInteger, converting to long if within range.
      */
-    private static JsonNode normalizeBigInteger(BigInteger value) {
-        boolean fitsInLong = value.compareTo(BigInteger.valueOf(Long.MAX_VALUE)) <= 0
+    private static JsonNode normalizeBigInteger(final BigInteger value) {
+        final boolean fitsInLong = value.compareTo(BigInteger.valueOf(Long.MAX_VALUE)) <= 0
             && value.compareTo(BigInteger.valueOf(Long.MIN_VALUE)) >= 0;
         return fitsInLong
             ? LongNode.valueOf(value.longValue())
@@ -208,7 +243,7 @@ public final class JsonNormalizer {
      * Attempts to normalize temporal types (date/time) to ISO strings.
      * Returns null if the value is not a temporal type.
      */
-    private static JsonNode tryNormalizeTemporal(Object value) {
+    private static JsonNode tryNormalizeTemporal(final Object value) {
         if (value instanceof LocalDateTime ldt) {
             return formatTemporal(ldt, DateTimeFormatter.ISO_LOCAL_DATE_TIME);
         } else if (value instanceof LocalDate ld) {
@@ -216,7 +251,9 @@ public final class JsonNormalizer {
         } else if (value instanceof LocalTime lt) {
             return formatTemporal(lt, DateTimeFormatter.ISO_LOCAL_TIME);
         } else if (value instanceof ZonedDateTime zonedDateTime) {
-            return formatTemporal(zonedDateTime, DateTimeFormatter.ISO_ZONED_DATE_TIME);
+            // Use toOffsetDateTime().toString() to avoid [Zone/Id] bracket
+            // that ZonedDateTime.toString() appends (not standard ISO 8601)
+            return StringNode.valueOf(zonedDateTime.toOffsetDateTime().toString());
         } else if (value instanceof OffsetDateTime offsetDateTime) {
             return formatTemporal(offsetDateTime, DateTimeFormatter.ISO_OFFSET_DATE_TIME);
         } else if (value instanceof Calendar calendar) {
@@ -239,7 +276,7 @@ public final class JsonNormalizer {
     /**
      * Helper method to format temporal values consistently.
      */
-    private static <T> JsonNode formatTemporal(T temporal, DateTimeFormatter formatter) {
+    private static <T> JsonNode formatTemporal(final T temporal, final DateTimeFormatter formatter) {
         return StringNode.valueOf(formatter.format((java.time.temporal.TemporalAccessor) temporal));
     }
 
@@ -247,7 +284,7 @@ public final class JsonNormalizer {
      * Attempts to normalize collections (Collection and Map).
      * Returns null if the value is not a collection type.
      */
-    private static JsonNode tryNormalizeCollection(Object value) {
+    private static JsonNode tryNormalizeCollection(final Object value) {
         if (value instanceof Collection<?>) {
             return normalizeCollection((Collection<?>) value);
         } else if (value instanceof Map<?, ?>) {
@@ -260,18 +297,22 @@ public final class JsonNormalizer {
     /**
      * Normalizes a Collection to an ArrayNode.
      */
-    private static ArrayNode normalizeCollection(Collection<?> collection) {
-        ArrayNode arrayNode = MAPPER.createArrayNode();
-        collection.forEach(item -> arrayNode.add(normalize(item)));
+    private static ArrayNode normalizeCollection(final Collection<?> collection) {
+        final ArrayNode arrayNode = MAPPER.createArrayNode();
+        for (Object item : collection) {
+            arrayNode.add(normalize(item));
+        }
         return arrayNode;
     }
 
     /**
      * Normalizes a Map to an ObjectNode.
      */
-    private static ObjectNode normalizeMap(Map<?, ?> map) {
-        ObjectNode objectNode = MAPPER.createObjectNode();
-        map.forEach((key, value) -> objectNode.set(String.valueOf(key), normalize(value)));
+    private static ObjectNode normalizeMap(final Map<?, ?> map) {
+        final ObjectNode objectNode = MAPPER.createObjectNode();
+        for (Map.Entry<?, ?> entry : map.entrySet()) {
+            objectNode.set(String.valueOf(entry.getKey()), normalize(entry.getValue()));
+        }
         return objectNode;
     }
 
@@ -279,7 +320,7 @@ public final class JsonNormalizer {
      * Attempts to normalize POJOs using Jackson's default conversion.
      * Returns null for non-serializable objects.
      */
-    private static JsonNode tryNormalizePojo(Object value) {
+    private static JsonNode tryNormalizePojo(final Object value) {
         try {
             return MAPPER.valueToTree(value);
         } catch (Exception e) {
@@ -288,58 +329,66 @@ public final class JsonNormalizer {
     }
 
     /**
-     * Normalizes arrays to ArrayNode.
+     * Normalizes primitive arrays to ArrayNode without auto-boxing overhead.
+     * Uses direct array population to avoid IntFunction lambda allocations.
      */
-    private static JsonNode normalizeArray(Object array) {
-        if (array instanceof int[] intArr) {
-            return buildArrayNode(intArr.length, i -> IntNode.valueOf(intArr[i]));
-        } else if (array instanceof long[] longArr) {
-            return buildArrayNode(longArr.length, i -> LongNode.valueOf(longArr[i]));
-        } else if (array instanceof double[] doubleArr) {
-            return buildArrayNode(doubleArr.length, i -> normalizeDoubleElement(doubleArr[i]));
-        } else if (array instanceof float[] floatArr) {
-            return buildArrayNode(floatArr.length, i -> normalizeFloatElement(floatArr[i]));
-        } else if (array instanceof boolean[] boolArr) {
-            return buildArrayNode(boolArr.length, i -> BooleanNode.valueOf(boolArr[i]));
-        } else if (array instanceof byte[] byteArr) {
-            return buildArrayNode(byteArr.length, i -> IntNode.valueOf(byteArr[i]));
-        } else if (array instanceof short[] shortArr) {
-            return buildArrayNode(shortArr.length, i -> ShortNode.valueOf(shortArr[i]));
-        } else if (array instanceof char[] charArr) {
-            return buildArrayNode(charArr.length, i -> StringNode.valueOf(String.valueOf(charArr[i])));
-        } else if (array instanceof Object[] objArr) {
-            return buildArrayNode(objArr.length, i -> normalize(objArr[i]));
+    private static JsonNode normalizeArray(final Object array) {
+        if (array instanceof int[] intArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (int i : intArray) {
+                node.add(IntNode.valueOf(i));
+            }
+            return node;
+        } else if (array instanceof long[] longArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (long l : longArray) {
+                node.add(LongNode.valueOf(l));
+            }
+            return node;
+        } else if (array instanceof double[] doubleArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (final double d : doubleArray) {
+                node.add(Double.isFinite(d) ? DoubleNode.valueOf(d) : NullNode.getInstance());
+            }
+            return node;
+        } else if (array instanceof float[] floatArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (final float f : floatArray) {
+                node.add(Float.isFinite(f) ? FloatNode.valueOf(f) : NullNode.getInstance());
+            }
+            return node;
+        } else if (array instanceof boolean[] boolArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (boolean b : boolArray) {
+                node.add(BooleanNode.valueOf(b));
+            }
+            return node;
+        } else if (array instanceof byte[] byteArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (byte by : byteArray) {
+                node.add(IntNode.valueOf(by));
+            }
+            return node;
+        } else if (array instanceof short[] shortArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (short s : shortArray) {
+                node.add(ShortNode.valueOf(s));
+            }
+            return node;
+        } else if (array instanceof char[] charArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (char c : charArray) {
+                node.add(StringNode.valueOf(String.valueOf(c)));
+            }
+            return node;
+        } else if (array instanceof Object[] objArray) {
+            final ArrayNode node = MAPPER.createArrayNode();
+            for (Object o : objArray) {
+                node.add(normalize(o));
+            }
+            return node;
         } else {
             return MAPPER.createArrayNode();
         }
-    }
-
-    /**
-     * Builds an ArrayNode using a functional approach.
-     */
-    private static ArrayNode buildArrayNode(int length, IntFunction<JsonNode> mapper) {
-        ArrayNode arrayNode = MAPPER.createArrayNode();
-        for (int i = 0; i < length; i++) {
-            arrayNode.add(mapper.apply(i));
-        }
-        return arrayNode;
-    }
-
-    /**
-     * Normalizes a single double element from an array.
-     */
-    private static JsonNode normalizeDoubleElement(double value) {
-        return Double.isFinite(value)
-            ? DoubleNode.valueOf(value)
-            : NullNode.getInstance();
-    }
-
-    /**
-     * Normalizes a single float element from an array.
-     */
-    private static JsonNode normalizeFloatElement(float value) {
-        return Float.isFinite(value)
-            ? FloatNode.valueOf(value)
-            : NullNode.getInstance();
     }
 }
